# iced_manga_reader

./: Cargo.toml  build.rs
assets/: manga.json
protos/: manga.proto
